[gd_scene load_steps=2 format=3 uid="uid://caijb5mu0pkxf"]

[ext_resource type="Script" uid="uid://c0njmqyrqah07" path="res://addons/EditorBakeTool/Settings/Settings.gd" id="1_bjo7m"]

[node name="Settings" type="Window"]
title = "Editor Bake Tool Settings"
initial_position = 2
size = Vector2i(400, 200)
popup_window = true
script = ExtResource("1_bjo7m")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Bake Tool"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="canceled" from="FileDialog" to="." method="_close_file_dialog"]
[connection signal="close_requested" from="FileDialog" to="." method="_close_file_dialog"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
